--- a/Funktionsplotter/en.lproj/MainStoryboard.storyboard
+++ b/Funktionsplotter/en.lproj/MainStoryboard.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
+        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
@@ -43,11 +44,36 @@
                                     <action selector="go:" destination="2" eventType="touchUpInside" id="XMZ-lX-ZoU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5Ld-TB-4Z8">
+                                <rect key="frame" x="99" y="403" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="ok">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ok:" destination="2" eventType="touchUpInside" id="Str-YA-71d"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hochzahl" minimumFontSize="17" id="tkW-jH-kVn">
+                                <rect key="frame" x="191" y="406" width="97" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="tastatur:" destination="2" eventType="editingDidEndOnExit" id="Pv1-8M-tZ0"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </view>
                     <connections>
                         <outlet property="eingabe" destination="U5S-dY-VEG" id="auL-1m-E6V"/>
+                        <outlet property="hochzahlEingabe" destination="tkW-jH-kVn" id="C1R-lR-CWS"/>
                     </connections>
                 </viewController>
             </objects>
@@ -61,8 +87,10 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ph3nx_ViewController.h"/>
             <relationships>
                 <relationship kind="action" name="go:"/>
+                <relationship kind="action" name="ok:"/>
                 <relationship kind="action" name="tastatur:"/>
                 <relationship kind="outlet" name="eingabe" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="hochzahlEingabe" candidateClass="UITextField"/>
             </relationships>
         </class>
     </classes>
